# agentpack

./: .gitignore  LICENSE  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentpack/: __init__.py  cli.py  frontmatter.py  miniyaml.py  project.py  scaffold.py  targets.py
examples/code-review-toolkit/: agentpack.yaml
examples/code-review-toolkit/commands/: quick-review.md
examples/code-review-toolkit/skills/review-pull-request/: SKILL.md
examples/code-review-toolkit/skills/review-pull-request/references/: checklist.md
examples/code-review-toolkit/skills/write-commit-message/: SKILL.md
tests/: test_agentpack.py
