[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillpack"
version = "0.1.0"
description = "Write your agent skills once, ship them everywhere: Cursor, Claude Code, Codex, GitHub Copilot and any SKILL.md-compatible agent."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "agentpack contributors" }]
keywords = [
    "ai",
    "agent",
    "skills",
    "skill-md",
    "claude-code",
    "cursor",
    "codex",
    "copilot",
    "plugin",
    "packaging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/superman2003/agentpack"
Issues = "https://github.com/superman2003/agentpack/issues"

[project.scripts]
agentpack = "agentpack.cli:main"

[tool.setuptools.packages.find]
include = ["agentpack*"]
